--- a/src/vscp/vscpservice/vscpservice.vcxproj.filters
+++ b/src/vscp/vscpservice/vscpservice.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="..\common\tcpipclientthread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\udpthread.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\common\userlist.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -67,6 +64,30 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\common\vscpvariable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\frozen.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\mongoose.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\randpassword.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\slre.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\strtokenizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\guid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\vscpeventhelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\vscptcpif.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
