--- a/src/vscp/daemon/win32/vscpd.vcxproj.filters
+++ b/src/vscp/daemon/win32/vscpd.vcxproj.filters
@@ -98,6 +98,12 @@
     <ClInclude Include="..\..\..\common\slre.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\vscpeventhelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\vscphelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\common\clientlist.cpp">
