--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ src/vscp/uvscpd/nbproject/private/launcher.properties
 /src/vscp/daemon/win32/vscpd_vc2010.sdf
 /src/vscp/daemon/win32/vscpd_vc2010.suo
 /src/vscp/utils/vscp_bootloader/vscp_bootloader/vscp_bootloader.pro.user.1203ce1
+/new  1.txt
